tests/NormalTests/paczka1/small_fuzzy/64494405.err
Error in line 2: m2k1KyNjED S123 56,7
Error in line 13: A268 S815 89,3
Error in line 1: 2Ms4 A268 78,8
